# model_infer

./: CMakeLists.txt  README.md  build.sh  run.sh
include/: CMakeLists.txt  Detector.h  utils.h
src/: Detector.cpp  main.cpp  utils.cpp
